--- a/djangogramm/users/templates/users/post.html
+++ b/djangogramm/users/templates/users/post.html
@@ -24,7 +24,7 @@
                         {% endfor %}
                     {% endif %}
 
-                    <div class="card text-center">
+                    <div class="card text-center" style="margin-bottom: 30px">
                         <div class="card-body">
                             <p class="card-text" style="">{{ post.text|linebreaks }}</p>
                         </div>
