--- a/djangogramm/users/templates/registration/login.html
+++ b/djangogramm/users/templates/registration/login.html
@@ -5,13 +5,6 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="card">
                 <div class="well well-sm">
-                    {#                    {% if login %}#}
-                    {#                        {{ login }}#}
-                    {#                    {% endif %}#}
-                    {% if form.errors %}
-                        <p>{{ form.errors.error }}</p>
-                    {% endif %}
-
                     <form method="post">
                         {% csrf_token %}
                         <legend class="text-center">{{ title }}</legend>
@@ -23,7 +16,7 @@
                                 <input id="username" name="username" type="text"
                                        class="form-control">
                             </div>
-                            <div class="form-error">{{ form.username.errors }}</div>
+                            <div class="form-invalid-feedback">{{ form.username.errors }}</div>
                         </div>
                         <br>
                         <!-- Form password -->
@@ -32,12 +25,17 @@
                                    for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
                             <div class="col-md-9" style="max-width: 50%">
                                 <input id="password" name="password" type="password"
-                                       class="form-control">
+                                       class="form-control" placeholder="{{ form.password.errors }}">
                             </div>
-                            <div class="form-error">{{ form.password.errors }}</div>
+                            <div class="form-invalid-feedback">{{ form.password.errors }}</div>
+
                         </div>
                         <br>
-
+                        {% if form.non_field_errors %}
+                            <br>
+                            <div class="alert alert-danger" style="max-width: 50%; margin-bottom: 0; padding: 10px">{{ form.non_field_errors }}</div>
+                            <br>
+                        {% endif %}
                         <div class="form-group">
                             <div class="col-md-12 text-right">
                                 <button type="submit" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
@@ -45,6 +43,7 @@
                                     Войти
                                 </button>
                             </div>
+
                         </div>
                         <br>
                     </form>
