--- a/djangogramm/users/templates/registration/login.html
+++ b/djangogramm/users/templates/registration/login.html
@@ -1,4 +1,6 @@
 {% extends 'users/base.html' %}
+{% load account socialaccount %}
+
 
 {% block content %}
     <div class="container py-5 h-100">
@@ -33,7 +35,8 @@
                         <br>
                         {% if form.non_field_errors %}
                             <br>
-                            <div class="alert alert-danger" style="max-width: 50%; margin-bottom: 0; padding: 10px">{{ form.non_field_errors }}</div>
+                            <div class="alert alert-danger"
+                                 style="max-width: 50%; margin-bottom: 0; padding: 10px">{{ form.non_field_errors }}</div>
                             <br>
                         {% endif %}
                         <div class="form-group">
@@ -46,7 +49,25 @@
 
                         </div>
                         <br>
+                        <div class="row">
+                            <div class="col-sm-4 social-buttons">
+
+                                <a class="btn btn-block btn-social btn-google" style="padding-left: 0" href="{% provider_login_url "google" %}">
+                                    <span class="fa fa-google"></span> Sign in with Google
+                                </a>
+                                <br>
+                                <a class="btn btn-block btn-social btn-github" style="padding-left: 0" href="{% provider_login_url "github" %}">
+                                    <span class="fa fa-github"></span> Sign in with GitHub
+                                </a>
+
+                            </div>
+                        </div>
+                        <br>
+
+                        <p class="text-inverse text-center">Еще не зарегиситровались? <a
+                                href="{% url 'register' %}" data-abc="true">Регистрация</a></p>
                     </form>
+
 
                     {#    <a href="{% url 'password_reset' %}">Забыл пароль?</a>#}
                 </div>
